--- a/src/css/detail.css
+++ b/src/css/detail.css
@@ -137,6 +137,7 @@
   top: 0;
   min-height: 100%;
   background-color: #e0e0e0;
+  z-index: 999;
 }
 #sideBar .sideBar-forum {
   width: 45px;
@@ -208,6 +209,8 @@
 #top-nav {
   height: 100px;
   width: 100%;
+  background: #fff;
+  border-bottom: 1px solid rgba(221, 221, 221, 0.5);
 }
 #top-nav .top-navBox {
   width: 1200px;
@@ -250,15 +253,117 @@
 #details {
   width: 1010px;
   overflow: hidden;
-  margin: 40px auto 100px;
+  margin: 40px auto 50px;
 }
 #details .part-left {
   width: 380px;
   height: 500px;
-  border: 1px solid #e6e6e6;
   float: left;
   padding: 10px 45px 0;
   position: relative;
+}
+#details .part-left .smallBox {
+  width: 400px;
+  height: 400px;
+  border: 1px solid lightblue;
+  float: left;
+  position: relative;
+}
+#details .part-left .smallBox .smallpic {
+  width: 400px;
+  height: 400px;
+  border: none;
+  margin-bottom: 10px;
+  position: relative;
+}
+#details .part-left .smallBox .shade {
+  width: 100px;
+  height: 100px;
+  background: orange;
+  opacity: .3;
+  position: absolute;
+  left: 0;
+  top: 0;
+  visibility: hidden;
+}
+#details .part-left .smallBox .shade:hover {
+  cursor: pointer;
+}
+#details .bigBox {
+  width: 500px;
+  height: 500px;
+  border: 1px solid lightblue;
+  overflow: hidden;
+  position: absolute;
+  z-index: 100;
+  left: 725px;
+  visibility: hidden;
+}
+#details .bigBox .bigpic {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 800px;
+  height: 800px;
+}
+#details .smallList {
+  position: absolute;
+  left: 45px;
+  top: 420px;
+  width: 400px;
+  height: 56px;
+  overflow: hidden;
+}
+#details .smallList a {
+  float: left;
+  width: 15px;
+  height: 54px;
+  line-height: 54px;
+  border: 1px solid #ccc;
+  text-decoration: none;
+  text-align: center;
+  color: #e7e7e7;
+  background: #fff;
+}
+#details .smallList .smallImglist {
+  float: left;
+  margin-left: 18px;
+  width: 350px;
+  position: relative;
+}
+#details .smallList .smallImglist ul {
+  list-style: none;
+  float: left;
+  position: absolute;
+  left: 2px;
+  top: 0;
+}
+#details .smallList .smallImglist ul li {
+  float: left;
+  width: 52px;
+  height: 52px;
+  padding-right: 6px;
+}
+#details .smallList .smallImglist ul li img {
+  width: 52px;
+  height: 52px;
+  border: 1px solid #ccc;
+}
+#details .smallList .smallImglist ul li img .smallImgActive {
+  border: 1px solid red;
+}
+#details .smallList .left {
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 10;
+  color: #fff;
+}
+#details .smallList .right {
+  position: absolute;
+  right: 0;
+  top: 0;
+  color: #333;
 }
 #details .part-right {
   width: 510px;
@@ -545,6 +650,97 @@
   position: absolute;
   right: 20px;
   top: 0;
+}
+
+/*加入购物车弹出框*/
+#addcarBox {
+  width: 470px;
+  position: fixed;
+  left: 50%;
+  margin-left: -235px;
+  top: 20%;
+  box-shadow: 0 0 8px 8px #525253;
+  background: #fff;
+  overflow: hidden;
+  z-index: 111112;
+  visibility: hidden;
+}
+#addcarBox .addcarBox-header {
+  height: 46px;
+  line-height: 46px;
+  font-size: 14px;
+  background: #eee;
+  padding: 0 20px;
+  color: #666;
+  position: relative;
+}
+#addcarBox .addcarBox-header .close {
+  width: 20px;
+  height: 20px;
+  text-indent: -999em;
+  background: url(http://static.snail.com/images/cart/close.jpg) no-repeat;
+  position: absolute;
+  top: 13px;
+  right: 20px;
+}
+#addcarBox .addcarBox-main {
+  padding: 50px 0;
+  text-align: center;
+  overflow: hidden;
+  width: 100%;
+  font-size: 24px;
+  color: #444;
+}
+#addcarBox .addcarBox-main .success {
+  width: 60px;
+  height: 60px;
+  vertical-align: middle;
+  background: url(http://static.snail.com/images/cart/popicon.png) 0 0 no-repeat;
+  display: inline-block;
+  margin-right: 20px;
+}
+#addcarBox .addcarBox-main .addcarBox-btn {
+  width: 100%;
+  margin-top: 50px;
+  overflow: hidden;
+  text-align: center;
+}
+#addcarBox .addcarBox-main .addcarBox-btn .addcarBox-continue {
+  height: 43px;
+  line-height: 43px;
+  font-size: 18px;
+  border: 1px solid #d9d9d9;
+  background: #eee;
+  text-align: center;
+  display: inline-block;
+  margin: 0 10px;
+  color: #333;
+  padding: 0 15px;
+}
+#addcarBox .addcarBox-main .addcarBox-btn .addcarBox-settle {
+  height: 43px;
+  line-height: 43px;
+  font-size: 18px;
+  background: #ff9900;
+  text-align: center;
+  display: inline-block;
+  margin: 0 10px;
+  color: #fff;
+  padding: 0 15px;
+}
+
+/*加入购物车全屏遮罩*/
+#mask {
+  height: 1365px;
+  width: 100%;
+  background: #000;
+  opacity: 0.6;
+  filter: alpha(opacity=60);
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 111111;
+  visibility: hidden;
 }
 
 /*# sourceMappingURL=detail.css.map */
