--- a/src/sass/detail.scss
+++ b/src/sass/detail.scss
@@ -141,6 +141,7 @@ $fontSize:14px;
     top: 0;
     min-height: 100%;
     background-color: #e0e0e0;
+    z-index: 999;
     .sideBar-forum{
         width: 45px;
         height: 75px;
@@ -212,6 +213,8 @@ $fontSize:14px;
     height: 100px;
     width: 100%;
     // background: lightcoral;
+    background: #fff;
+    border-bottom: 1px solid rgba($color: #ddd, $alpha: 0.5);
     .top-navBox{
         width: $width;
         height: 100px;
@@ -255,14 +258,117 @@ $fontSize:14px;
 #details{
     width: 1010px;
     overflow: hidden;
-    margin: 40px auto 100px;
+    margin: 40px auto 50px;
     .part-left{
         width: 380px;
         height: 500px;
-        border: 1px solid #e6e6e6;
+        // border: 1px solid #e6e6e6;
         float: left;
         padding: 10px 45px 0;
         position: relative;
+        .smallBox{
+            width: 400px;
+            height: 400px;
+            border: 1px solid lightblue;
+            float: left;
+            position: relative;
+            .smallpic{
+                width: 400px;
+                height: 400px;
+                border: none;
+                margin-bottom: 10px;
+                position: relative;
+            }
+            .shade{
+                width: 100px;
+                height: 100px;
+                background: orange;
+                opacity: .3;
+                position: absolute;
+                left: 0;
+                top: 0;
+                visibility: hidden;
+                &:hover{
+                    cursor: pointer;
+                }
+            }
+        }
+    }
+    .bigBox{
+        width: 500px;
+        height: 500px;
+        border: 1px solid lightblue;
+        overflow: hidden;
+        position: absolute;
+        z-index: 100;
+        left: 725px;
+        visibility: hidden;
+        .bigpic{
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 800px;
+            height: 800px;
+        }
+    }
+    .smallList{
+        position: absolute;
+        left: 45px;
+        top: 420px;
+        width: 400px;
+        height: 56px;
+        overflow: hidden;
+        a{
+            float: left;
+            width: 15px;
+            height: 54px;
+            line-height: 54px;
+            border: 1px solid #ccc;
+            text-decoration: none;
+            text-align: center;
+            color: #e7e7e7;
+            background: #fff;
+        }
+        .smallImglist{
+            float: left;
+            margin-left: 18px;
+            width: 350px;
+            position: relative;
+            ul{
+                list-style: none;
+                float: left;
+                position: absolute;
+                left: 2px;
+                top: 0;
+                li{
+                    float: left;
+                    width: 52px;
+                    height: 52px;
+                    padding-right: 6px;
+                    img{
+                        width: 52px;
+                        height: 52px;
+                        border: 1px solid #ccc;
+                        .smallImgActive{
+                            border:1px solid red;
+                        }
+                    }
+                }
+            }
+        }
+        .left{
+            position: absolute;
+            left: 0;
+            top: 0;
+            z-index: 10;
+            color: #fff
+        }
+        .right{
+            position: absolute;
+            right: 0;
+            top: 0;
+            color: #333
+        }
     }
     .part-right{
         width: 510px;
@@ -375,8 +481,6 @@ $fontSize:14px;
         }
     }
 }
-
-
 /* 底部 */
 #footer{
     background-color: #fff;
@@ -579,4 +683,94 @@ $fontSize:14px;
             }
         }
     }
+}
+/*加入购物车弹出框*/
+#addcarBox{
+    width: 470px;
+    position: fixed;
+    left: 50%;
+    margin-left: -235px;
+    top: 20%;
+    box-shadow: 0 0 8px 8px #525253;
+    background: #fff;
+    overflow: hidden;
+    z-index: 111112;
+    visibility: hidden;
+    .addcarBox-header{
+        height: 46px;
+        line-height: 46px;
+        font-size: 14px;
+        background: #eee;
+        padding: 0 20px;
+        color: #666;
+        position: relative;
+        .close{
+            width: 20px;
+            height: 20px;
+            text-indent: -999em;
+            background: url(http://static.snail.com/images/cart/close.jpg) no-repeat;
+            position: absolute;
+            top: 13px;
+            right: 20px;
+        }
+    }
+    .addcarBox-main{
+        padding: 50px 0;
+        text-align: center;
+        overflow: hidden;
+        width: 100%;
+        font-size: 24px;
+        color: #444;
+        .success{
+            width: 60px;
+            height: 60px;
+            vertical-align: middle;
+            background: url(http://static.snail.com/images/cart/popicon.png) 0 0 no-repeat;
+            display: inline-block;
+            margin-right: 20px;
+        }
+        .addcarBox-btn{
+            width: 100%;
+            margin-top: 50px;
+            overflow: hidden;
+            text-align: center;
+            .addcarBox-continue{
+                height: 43px;
+                line-height: 43px;
+                font-size: 18px;
+                border: 1px solid #d9d9d9;
+                background: #eee;
+                text-align: center;
+                display: inline-block;
+                margin: 0 10px;
+                color: #333;
+                padding: 0 15px;
+            }
+            .addcarBox-settle{
+                height: 43px;
+                line-height: 43px;
+                font-size: 18px;
+                background: #ff9900;
+                text-align: center;
+                display: inline-block;
+                margin: 0 10px;
+                color: #fff;
+                padding: 0 15px;
+            }
+        }
+    }
+}
+
+/*加入购物车全屏遮罩*/
+#mask{
+    height: 1365px;
+    width: 100%;
+    background: #000;
+    opacity: 0.6;
+    filter: alpha(opacity=60);
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 111111;
+    visibility: hidden;
 }
