--- a/src/sass/login.scss
+++ b/src/sass/login.scss
@@ -89,6 +89,7 @@ html{
         position: relative;
         .close{
             background: url(https://passport.baidu.com/passApi/img/pass_login_icons.png) -72px -49px;
+            text-indent: -999em;
             width: 15px;
             height: 15px;
             position: absolute;
