--- a/src/sass/car.scss
+++ b/src/sass/car.scss
@@ -240,7 +240,7 @@ $fontSize:14px;
     width: 1200px;
     margin: 0 auto 50px;
     overflow: hidden;
-    .carTitle{
+    .carTitle1{
         width: 100%;
         height: 50px;
         line-height: 50px;
@@ -278,7 +278,7 @@ $fontSize:14px;
             float: left;
         }
     }
-    .carInner{
+    .carInner2{
         background: #fff;
         margin-top: 10px;
         width: 100%;
@@ -307,6 +307,69 @@ $fontSize:14px;
                 border-radius: 3px;
                 color: #ffffff;
                 display: inline-block;
+            }
+        }
+    }
+    .carProduct{
+        width: 100%;
+        height: 50px;
+        background: lightsalmon;
+    }
+    .carBox-footer{
+        .carBox-footer-left{
+            // width: 600px;
+            float: left;
+            background: lightskyblue;
+            padding: 20px 60px;
+            .deleteMore{
+                font-size: 14px;
+                color: #666666;
+                line-height: 50px;
+            }
+        }
+        .carBox-footer-right{
+            // width: 600px;
+            float: right;
+            background: lightpink;
+            padding: 20px 60px 20px 0;
+            .finalBtn{
+                width: 180px;
+                height: 50px;
+                line-height: 50px;
+                font-size: 16px;
+                text-align: center;
+                float: right;
+                background: #e5e5e5;
+                color: #9c9c9c;
+                text-decoration: none;
+                color: #ffffff;
+            }
+            .total{
+                padding: 0 10px;
+                float: right;
+                line-height: 50px;
+                .totalPrice{
+                    color: #ff9500;
+                    font-weight: bold;
+                    font-size: 24px;
+                    vertical-align: middle;
+                    span{
+                        color: #ff9500;
+                        font-weight: bold;
+                        font-size: 24px;
+                    }
+                }
+            }
+            .selectNum{
+                float: right;
+                padding: 0 20px;
+                line-height: 50px;
+                span{
+                    font-size: 14px;
+                    color: #ff7f00;
+                    vertical-align: middle;
+                    margin: 0 2px;
+                }
             }
         }
     }
