--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -222,6 +222,7 @@ $fontSize:14px;
     position: relative;
     z-index: 100;
     background: #fff;
+    border-bottom: 1px solid rgba($color: #ddd, $alpha: 0.5);
     .top-navBox{
         width: $width;
         height: 100px;
@@ -262,7 +263,6 @@ $fontSize:14px;
         // z-index: 100;
     }
 }
-
 /* 轮播图部分 */
 .munuActive{
     background-color: #fff;
@@ -284,9 +284,9 @@ $fontSize:14px;
         background: #323436;
         position: relative;
         li{
-            height: 46px;
+            height: 47px;
             width: 134px;
-            line-height: 46px;
+            line-height: 47px;
             padding: 0 40px 0 55px;
             position: relative;
             .menulogo{
@@ -330,8 +330,8 @@ $fontSize:14px;
                 width: 135px;
                 font-size: 16px;
                 margin-top: 2px;
-                height: 46px;
-                line-height: 46px;
+                height: 47px;
+                line-height: 47px;
             }
         }
     }
@@ -463,7 +463,6 @@ $fontSize:14px;
         }
     }
 }
-
 /*游戏道具部分*/
 #module-yxdj{
     width: $width;
@@ -757,6 +756,9 @@ $fontSize:14px;
             height: 358px;
             border: 1px solid #fff;
             background: #fff;
+            &:hover{
+                border:  1px solid orange;
+            }
         }
         .no-border{
             float: left;
@@ -808,7 +810,7 @@ $fontSize:14px;
     margin: 0 auto;
     padding-bottom: 40px;
     height: 500px;
-    background: lightblue;
+    // background: lightblue;
     .module-use-title{
         margin-bottom: 20px;
         h1{
@@ -827,6 +829,7 @@ $fontSize:14px;
             margin-right: 26px;
             background: #fff;
             text-align: center;
+            cursor: pointer;
         }
         .module-use-productRight{
             width: 280px;
@@ -834,18 +837,176 @@ $fontSize:14px;
             float: right;
             background: #fff;
             text-align: center;
+            cursor: pointer;
         }
         .use-goods{
-            @include borderTop(1px,solid, #daae63)
+            @include borderTop(2px,solid, #daae63);
+            h2{
+                font-size: 18px;
+                color: #ff9500;
+                text-align: center;
+                margin-top: 20px;
+                margin-bottom: 15px;
+            }
+            .module-use-product-container{
+                width: 280px;
+                height: 280px;
+                // background: lightsalmon;
+                position: relative;
+                h3{
+                    width: 280px;
+                    font-size: 22px;
+                    font-weight: normal;
+                    text-align: center;
+                }
+                h4{
+                    font-weight: normal;
+                    color: #999;
+                }
+                a{
+                    display: inline-block;
+                    margin-top: 50px;
+                }
+                .circle{
+                    display: block;
+                    background: #ff9500;
+                    width: 10px;
+                    height: 10px;
+                    cursor: pointer;
+                    border-radius: 50%;
+                    position: absolute;
+                    bottom: 0;
+                    left: 50%;
+
+                }
+            }
         }
         .use-game{
-            @include borderTop(1px,solid, #8fb578)
+            @include borderTop(2px,solid, #8fb578);
+            h2{
+                font-size: 18px;
+                color: #ff9500;
+                text-align: center;
+                margin-top: 20px;
+                margin-bottom: 15px;
+            }
+            .module-use-product-container{
+                width: 280px;
+                height: 280px;
+                // background: lightsalmon;
+                position: relative;
+                h3{
+                    width: 280px;
+                    font-size: 22px;
+                    font-weight: normal;
+                    text-align: center;
+                }
+                h4{
+                    font-weight: normal;
+                    color: #999;
+                }
+                a{
+                    display: inline-block;
+                    margin-top: 50px;
+                }
+                .circle{
+                    display: block;
+                    background: #ff9500;
+                    width: 10px;
+                    height: 10px;
+                    cursor: pointer;
+                    border-radius: 50%;
+                    position: absolute;
+                    bottom: 0;
+                    left: 50%;
+
+                }
+            }
         }
         .use-VR{
-            @include borderTop(1px,solid, #aa5251)
+            @include borderTop(2px,solid, #aa5251);
+            h2{
+                font-size: 18px;
+                color: #ff9500;
+                text-align: center;
+                margin-top: 20px;
+                margin-bottom: 15px;
+            }
+            .module-use-product-container{
+                width: 280px;
+                height: 280px;
+                // background: lightsalmon;
+                position: relative;
+                h3{
+                    width: 280px;
+                    font-size: 22px;
+                    font-weight: normal;
+                    text-align: center;
+                }
+                h4{
+                    font-weight: normal;
+                    color: #999;
+                }
+                a{
+                    display: inline-block;
+                    margin-top: 50px;
+                }
+                .circle{
+                    display: block;
+                    background: #ff9500;
+                    width: 10px;
+                    height: 10px;
+                    cursor: pointer;
+                    border-radius: 50%;
+                    position: absolute;
+                    bottom: 0;
+                    left: 50%;
+
+                }
+            }
         }
         .use-community{
-            @include borderTop(1px,solid, #4e8bba)
+            @include borderTop(2px,solid, #4e8bba);
+            h2{
+                font-size: 18px;
+                color: #303030;
+                color: #ff9500;
+                text-align: center;
+                margin-top: 20px;
+                margin-bottom: 15px;
+            }
+            .module-use-product-container{
+                width: 280px;
+                height: 280px;
+                // background: lightsalmon;
+                position: relative;
+                h3{
+                    width: 280px;
+                    font-size: 22px;
+                    font-weight: normal;
+                    text-align: center;
+                }
+                h4{
+                    font-weight: normal;
+                    color: #999;
+                }
+                a{
+                    display: inline-block;
+                    margin-top: 50px;
+                }
+                .circle{
+                    display: block;
+                    background: #ff9500;
+                    width: 10px;
+                    height: 10px;
+                    cursor: pointer;
+                    border-radius: 50%;
+                    position: absolute;
+                    bottom: 0;
+                    left: 50%;
+
+                }
+            }
         }
     }
 }
