--- a/src/css/car.css
+++ b/src/css/car.css
@@ -310,25 +310,149 @@ body {
 }
 #carBox .carProduct {
   width: 100%;
-  height: 50px;
-  background: lightsalmon;
+  overflow: hidden;
+  background: #fff;
 }
-#carBox .carBox-footer .carBox-footer-left {
+#carBox .carProduct .carProducts {
+  width: 100%;
+  min-height: 120px;
+  overflow: hidden;
+  border-bottom: 1px solid #dedede;
+}
+#carBox .carProduct .carProducts .col1 {
+  width: 100px;
+  height: 120px;
   float: left;
-  background: lightskyblue;
+  position: relative;
+}
+#carBox .carProduct .carProducts .col1 .checkbox {
+  width: 18px;
+  height: 18px;
+  position: absolute;
+  right: 30px;
+  top: 50px;
+  color: #333;
+}
+#carBox .carProduct .carProducts .col2 {
+  width: 490px;
+  height: 120px;
+  float: left;
+  position: relative;
+  top: 10px;
+}
+#carBox .carProduct .carProducts .col2 .pic {
+  width: 100px;
+  height: 100px;
+  float: left;
+  margin-right: 10px;
+  position: relative;
+}
+#carBox .carProduct .carProducts .col2 .pic img {
+  width: 100px;
+  height: 100px;
+  border: 1px solid #ccc;
+}
+#carBox .carProduct .carProducts .col2 .info {
+  width: 285px;
+  margin-right: 10px;
+  float: left;
+}
+#carBox .carProduct .carProducts .col2 .info:hover {
+  cursor: pointer;
+  color: orange;
+  text-decoration: underline;
+}
+#carBox .carProduct .carProducts .col3 {
+  width: 90px;
+  height: 120px;
+  float: left;
+}
+#carBox .carProduct .carProducts .col3 .oneprice {
+  font-size: 14px;
+  height: 120px;
+  line-height: 120px;
+  text-align: center;
+}
+#carBox .carProduct .carProducts .col4 {
+  width: 195px;
+  height: 120px;
+  float: left;
+}
+#carBox .carProduct .carProducts .col4 .numberBox {
+  margin: 40px 0 0 35px;
+}
+#carBox .carProduct .carProducts .col4 .numberBox a {
+  width: 34px;
+  height: 34px;
+  line-height: 34px;
+  font-size: 25px;
+  font-weight: bold;
+  color: #333;
+  background: #f0f0f0;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  vertical-align: middle;
+}
+#carBox .carProduct .carProducts .col4 .numberBox .number {
+  width: 70px;
+  height: 34px;
+  background: #fff;
+  text-align: center;
+  border: 1px solid #f0f0f0;
+  font-size: 14px;
+}
+#carBox .carProduct .carProducts .col5 {
+  width: 115px;
+  height: 120px;
+  float: left;
+}
+#carBox .carProduct .carProducts .col5 .oneprices {
+  color: #ff7f00;
+  font-size: 14px;
+  line-height: 115px;
+  text-align: center;
+}
+#carBox .carProduct .carProducts .col6 {
+  width: 210px;
+  height: 120px;
+  float: left;
+}
+#carBox .carProduct .carProducts .col6 .delete {
+  text-indent: -999em;
+  text-decoration: none;
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  position: relative;
+  left: 60px;
+  top: 35px;
+  background: url(http://static.snail.com/images/cart/del.png) no-repeat 0 -30px;
+}
+#carBox .carProduct .carProducts .col6 .delete:hover {
+  background-position: 0 0;
+}
+
+.carBox-footer {
+  width: 1200px;
+  margin: 0 auto;
+  background: #fff;
+  min-height: 100px;
+}
+.carBox-footer .carBox-footer-left {
+  float: left;
   padding: 20px 60px;
 }
-#carBox .carBox-footer .carBox-footer-left .deleteMore {
+.carBox-footer .carBox-footer-left .deleteMore {
   font-size: 14px;
   color: #666666;
   line-height: 50px;
 }
-#carBox .carBox-footer .carBox-footer-right {
+.carBox-footer .carBox-footer-right {
   float: right;
-  background: lightpink;
   padding: 20px 60px 20px 0;
 }
-#carBox .carBox-footer .carBox-footer-right .finalBtn {
+.carBox-footer .carBox-footer-right .finalBtn {
   width: 180px;
   height: 50px;
   line-height: 50px;
@@ -340,28 +464,28 @@ body {
   text-decoration: none;
   color: #ffffff;
 }
-#carBox .carBox-footer .carBox-footer-right .total {
+.carBox-footer .carBox-footer-right .total {
   padding: 0 10px;
   float: right;
   line-height: 50px;
 }
-#carBox .carBox-footer .carBox-footer-right .total .totalPrice {
+.carBox-footer .carBox-footer-right .total .totalPrice {
   color: #ff9500;
   font-weight: bold;
   font-size: 24px;
   vertical-align: middle;
 }
-#carBox .carBox-footer .carBox-footer-right .total .totalPrice span {
+.carBox-footer .carBox-footer-right .total .totalPrice span {
   color: #ff9500;
   font-weight: bold;
   font-size: 24px;
 }
-#carBox .carBox-footer .carBox-footer-right .selectNum {
+.carBox-footer .carBox-footer-right .select {
   float: right;
   padding: 0 20px;
   line-height: 50px;
 }
-#carBox .carBox-footer .carBox-footer-right .selectNum span {
+.carBox-footer .carBox-footer-right .select span {
   font-size: 14px;
   color: #ff7f00;
   vertical-align: middle;
