--- a/src/css/index.css
+++ b/src/css/index.css
@@ -102,11 +102,11 @@ html, body {
 #header .headerBox .order > a:hover {
   color: #fff;
 }
-#header .headerBox .cart {
+#header .headerBox .car {
   position: relative;
   float: right;
 }
-#header .headerBox .cart i {
+#header .headerBox .car i {
   display: block;
   width: 21px;
   height: 16px;
@@ -115,7 +115,7 @@ html, body {
   top: 16px;
   background: url(http://mobile.snail.com/static/common/images/nav-icon.png) -50px 0 no-repeat;
 }
-#header .headerBox .cart a {
+#header .headerBox .car a {
   width: 110px;
   height: 43px;
   line-height: 43px;
@@ -128,7 +128,7 @@ html, body {
   text-decoration: none;
   background: #232426;
 }
-#header .headerBox .cart span {
+#header .headerBox .car span {
   color: #fa0;
 }
 
@@ -153,8 +153,40 @@ html, body {
   background: url(../img/sidebar.png) -55px -152px no-repeat;
   z-index: 999;
 }
-#sideBar .sideBar-forum:hover {
-  background-position: -55px -228px;
+#sideBar .sideBar-forum .sideBar-forum-way {
+  width: 314px;
+  height: 101px;
+  border: 1px solid #ff9500;
+  background: #fff;
+  position: absolute;
+  top: 0;
+  left: -316px;
+  padding: 16px 0 15px;
+}
+#sideBar .sideBar-forum .sideBar-forum-way .forum-mobile {
+  height: 101px;
+  float: left;
+  color: #666;
+  text-align: center;
+  font-size: 14px;
+  width: 156px;
+  border-right: 1px dashed #dedede;
+}
+#sideBar .sideBar-forum .sideBar-forum-way .forum-mobile .mobile-icon, #sideBar .sideBar-forum .sideBar-forum-way .forum-mobile .game-icon {
+  width: 32px;
+  height: 32px;
+  display: block;
+  margin: 18px auto 20px;
+  background: url(../img/sidebar.png) -68px -808px no-repeat;
+}
+#sideBar .sideBar-forum .sideBar-forum-way .forum-mobile .mobile-icon:hover, #sideBar .sideBar-forum .sideBar-forum-way .forum-mobile .game-icon:hover {
+  background-position: -68px -841px;
+}
+#sideBar .sideBar-forum .sideBar-forum-way .forum-mobile .game-icon {
+  background: url(../img/sidebar.png) -68px -874px no-repeat;
+}
+#sideBar .sideBar-forum .sideBar-forum-way .forum-mobile .game-icon:hover {
+  background-position: -68px -907px;
 }
 #sideBar .sideBar-service {
   width: 45px;
@@ -179,8 +211,14 @@ html, body {
   background: url(../img/sidebar.png) 0 -947px no-repeat;
   z-index: 999;
 }
-#sideBar .sideBar-share:hover {
-  background-position: -55px -947px;
+#sideBar .sideBar-share .sideBar-share-way {
+  cursor: pointer;
+  height: 330px;
+  width: 230px;
+  border: 1px solid #ff9500;
+  position: absolute;
+  right: 45px;
+  background: #fff;
 }
 #sideBar .sideBar-idea {
   width: 45px;
