--- a/src/sass/car.scss
+++ b/src/sass/car.scss
@@ -312,14 +312,139 @@ $fontSize:14px;
     }
     .carProduct{
         width: 100%;
-        height: 50px;
-        background: lightsalmon;
+        // min-height: 120px;
+        overflow: hidden;
+        background: #fff;
+        .carProducts{
+            width: 100%;
+            min-height: 120px;
+            overflow: hidden;
+            border-bottom: 1px solid #dedede;
+            .col1{
+                width: 100px;
+                height: 120px;
+                float: left;
+                position: relative;
+                .checkbox{
+                    width: 18px;
+                    height: 18px;
+                    position: absolute;
+                    right: 30px;
+                    top: 50px;
+                    color: #333;
+                }
+            }
+            .col2{
+                width: 490px;
+                height: 120px;
+                float: left;
+                position: relative;
+                top: 10px;
+                .pic{
+                    width: 100px;
+                    height: 100px;
+                    float: left;
+                    margin-right: 10px;
+                    position: relative;
+                    img{
+                        width: 100px;
+                        height: 100px;
+                        border: 1px solid #ccc;
+                    }
+                }
+                .info{
+                    width: 285px;
+                    margin-right: 10px;
+                    float: left;
+                    &:hover{
+                        cursor: pointer;
+                        color: orange;
+                        text-decoration: underline;
+                    }
+                }
+            }
+            .col3{
+                width: 90px;
+                height: 120px;
+                float: left;
+                .oneprice{
+                    font-size: 14px;
+                    height: 120px;
+                    line-height: 120px;
+                    text-align: center;
+                }
+            }
+            .col4{
+                width: 195px;
+                height: 120px;
+                float: left; 
+                .numberBox{
+                    margin: 40px 0 0 35px;    
+                    a{
+                        width: 34px;
+                        height: 34px;
+                        line-height: 34px;
+                        font-size: 25px;
+                        font-weight: bold;
+                        color: #333;
+                        background: #f0f0f0;
+                        text-align: center;
+                        text-decoration: none;
+                        display: inline-block;
+                        vertical-align: middle;
+                    }
+                    .number{
+                        width: 70px;
+                        height: 34px;
+                        background: #fff;
+                        text-align: center;
+                        border: 1px solid #f0f0f0;
+                        font-size: 14px;
+                    }
+                }
+            }
+            .col5{
+                width: 115px;
+                height: 120px;
+                float: left;
+                .oneprices{
+                    color: #ff7f00;
+                    font-size: 14px;
+                    line-height: 115px;
+                    text-align: center;
+                }
+            }
+            .col6{
+                width: 210px;
+                height: 120px;
+                float: left;
+                .delete{
+                    text-indent: -999em;
+                    text-decoration: none;
+                    display: inline-block;
+                    width: 30px;
+                    height: 30px;
+                    position: relative;
+                    left: 60px;
+                    top: 35px;
+                    background: url(http://static.snail.com/images/cart/del.png) no-repeat 0 -30px;
+                    &:hover{
+                        background-position: 0 0 ;
+                    }
+                }
+            }
+            
+        }
+        }
     }
     .carBox-footer{
+        width: 1200px;
+        margin: 0 auto;
+        background: #fff;
+        min-height: 100px;
         .carBox-footer-left{
             // width: 600px;
             float: left;
-            background: lightskyblue;
             padding: 20px 60px;
             .deleteMore{
                 font-size: 14px;
@@ -330,7 +455,6 @@ $fontSize:14px;
         .carBox-footer-right{
             // width: 600px;
             float: right;
-            background: lightpink;
             padding: 20px 60px 20px 0;
             .finalBtn{
                 width: 180px;
@@ -360,7 +484,7 @@ $fontSize:14px;
                     }
                 }
             }
-            .selectNum{
+            .select{
                 float: right;
                 padding: 0 20px;
                 line-height: 50px;
@@ -373,7 +497,6 @@ $fontSize:14px;
             }
         }
     }
-}
 
 /* 底部 */
 #footer{
